# ChangeLog for dev-vcs/bzr-explorer
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-explorer/ChangeLog,v 1.4 2010/07/27 20:55:31 fauli Exp $

  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
  bzr-explorer-1.0.2.ebuild:
  fix bug 329461 by restricting Python ABIs to 2.*, Bazaar itself has no
  Python 3 support

*bzr-explorer-1.0.2 (23 Jun 2010)

  23 Jun 2010; Christian Faulhammer <fauli@gentoo.org>
  -bzr-explorer-1.0.0.ebuild, +bzr-explorer-1.0.2.ebuild:
  version bump

*bzr-explorer-1.0.1 (16 Mar 2010)

  16 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  +bzr-explorer-1.0.1.ebuild:
  version bump

*bzr-explorer-1.0.0 (08 Mar 2010)

  08 Mar 2010; Christian Faulhammer <fauli@gentoo.org>
  +bzr-explorer-1.0.0.ebuild, +metadata.xml:
  initial commit, ebuild taken from Bazaar overlay by Mark Lee
