@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST bzr-explorer-1.0.1.tar.gz 1325713 RMD160 ee0e35a596b41dcde76bf8d22c828cd7656173fc SHA1 96fe9fe4b1c144b52699e15164e942852cadaa87 SHA256 1d5d1d74ac1910820de7fb76a3ba17f454d066201fa44de2921f4de5c8642a2c
 DIST bzr-explorer-1.0.2.tar.gz 1363775 RMD160 43af18e021ba4e975ac4ceabc928c266402ddef8 SHA1 ad57c9cbcde2004af76ed29b520ddd075c2d15fe SHA256 5f00b0d44763e1843dc3ba53c3123861747c7f49504f971f96cc21cbd0527006
-EBUILD bzr-explorer-1.0.1.ebuild 692 RMD160 dc2945f69757c8809452a1de44c3e8e1630b8ee1 SHA1 641dad6f2f2c9182ba5d0514d9bde4d25e04fb2d SHA256 0643f57526d7ee91afd2ce69ed9c8b69e971ce2ac734e8f197db7c0ce0b5c0a9
 EBUILD bzr-explorer-1.0.2.ebuild 771 RMD160 cd471614d2be17a9918137c9317f99b3975d6a20 SHA1 5bfdd564009d1b9b219dad12b00adccfabaa479a SHA256 c13127ad84a37df73363701f9a98f97b6c8d17ac993f0bcb2f84e214d0c4729c
-MISC ChangeLog 888 RMD160 c6964eff49519df7af29a39c6c61c8c80a15bcb7 SHA1 fbed5962983174f573a0970b159cc5d91a2b9595 SHA256 5432a9eb4bf870fe9479e74c2b4ce42fa513f5a1e658246f7c4ffc3cddcb738f
+MISC ChangeLog 985 RMD160 8865a6159cbe63a9fbe8dc3ffe97c6fa8856de47 SHA1 1c44d60e5d1ee7855f688170b80f00d0d0656d18 SHA256 620fb422db96d1f062d3cacdc7946c475269dc3b4f580e5bf08d65b26ebdf36f
 MISC metadata.xml 548 RMD160 6584f99391e5ab9732c71da280f7c72cc6fe8b09 SHA1 c7660cf3322bb1fb62bc96280e711bff2305b084 SHA256 9999d2e2ae17e6f69b0494acf7c6724607ca8bdbd060d8f3f8d87822769df48c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkxPSF8ACgkQNQqtfCuFneMrhwCgm5HwkXJqmMajAz2fkgpkSqTa
-CRMAnjPCkDLmyqVDXDuP9jo5U+QS3Z4n
-=jEF2
+iEYEARECAAYFAkxPSa0ACgkQNQqtfCuFneNpdwCgj1ac0EMC0dHPZZFdB8ZTMF/p
+sGMAmwRpOms94pVkAYFD1Z+B/z34HsQ5
+=tChR
 -----END PGP SIGNATURE-----
