@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST bzr-gtk-0.98.0.tar.gz 243271 RMD160 5a890f24a0de55092d6892872b5ae6fec3e68165 SHA1 3b1a2f3e5dbc45763ab4a69b4b4ca84bdc49a836 SHA256 ca9f41c66583d04acec7961810aab888dcdee1e36e7395356a9a4ad5e3dcfee8
-EBUILD bzr-gtk-0.98.0.ebuild 1048 RMD160 b0b5e26f6ffd676d351f7a604e8210938454db11 SHA1 9db0fd1bc922406431b3b6e6dd5f07c107be993c SHA256 2f8b41fbd60c9aa28ed887b7bf0582014bfe2de20f812ba54ee6e622d855c84b
-MISC ChangeLog 591 RMD160 d21df68f5e147b3df5ed304da1bed010be51507e SHA1 8e1a421a8d2f2b8351b3b35c7b1f60def1fea097 SHA256 766f29633700c4e4b08be71e3fddb10db9a6b4a85eca7635c20361bbb200d3bc
+EBUILD bzr-gtk-0.98.0.ebuild 1096 RMD160 a1982dec66adb151ed486cf4c6e0367f15ca3fcc SHA1 7fa2b9ccb6329260e624069d435592f7f224a298 SHA256 c740fb66c1253691a75fed3fa2f5f9acebc7d01f4272a88cc7197a74715332cf
+MISC ChangeLog 761 RMD160 f79ab7454c124808a383a99f9b175587a417647a SHA1 c8dd2c9ce0317af4ce04f291376df5f20f46cd00 SHA256 ed45bf62339d007063be08b48037f36993379fbbd56e9a1c47b52e3c2debe906
 MISC metadata.xml 705 RMD160 d1bbaec951e61c53695355d9b41b4b4852c28303 SHA1 b16f1d497821168d89d5828ebf7dfd9baf6f8f06 SHA256 a52a4c522558e6a4130629a77b1ef5ffc502378eb53d65e2922123570c05c871
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iEYEARECAAYFAkxPSi4ACgkQNQqtfCuFneMUnQCghcF8TCNYfpZrg9INQlg1VS9J
+xyIAn1ZVTRikVyPY01/6GPcaaSZl9uHa
+=yZDh
+-----END PGP SIGNATURE-----
