@@ -4,13 +4,13 @@ Hash: SHA1
 DIST bzr-rewrite-0.5.5.tar.gz 30688 RMD160 958c887eb4c28ddf527927e9890d438792917d35 SHA1 c7de2e5fb07153d52aaf7f8a4d556dded075a3f4 SHA256 fb100a9b8259deeaeb2d22bd6ed7c3230c9756a08571ffd33c406c811f6e4dc4
 DIST bzr-rewrite-0.6.0.tar.gz 30440 RMD160 af8f538c313b95dad899874abd8495cec64ed344 SHA1 fb40eefdadbd8816b8d51d9195d30fe7349585a1 SHA256 e372a16c32f051d7a60bf0beadf4c7f31e76cf1427bf711c4058c7f8be86052b
 EBUILD bzr-rewrite-0.5.5.ebuild 597 RMD160 22e6f322773320059a7d273043fecdc00fcf88c1 SHA1 4d368ef645f9a51de8eaf4e2637a6eda756608d3 SHA256 f2fd1648cd8d1c85a0e23157e71c0cd9c905490d37a61a7f1a097478bcf29e04
-EBUILD bzr-rewrite-0.6.0.ebuild 623 RMD160 13c6a5cdec1c83b6eb2cf345577d815cfa43817c SHA1 61d7db15a26b75929b803b0e65e87e81a4c25cdd SHA256 38c5c591e3ece47096d7013cf344aa63def888f4a469aafab9ba61eb42491292
-MISC ChangeLog 552 RMD160 7bd6c440fc48ca35cc7af024f0b020b47b204ae6 SHA1 74e2cba9c8a6185a9b6fe8c69985e534080e93d0 SHA256 8236d23c585a691f832400012ea8961fb7b6f0a66d7ce0b2da7109c4cfebd8da
+EBUILD bzr-rewrite-0.6.0.ebuild 694 RMD160 9e15c50e3d29690acf7e03c5ccdc9ba1045e76fb SHA1 077a79134cc1213897212a73cd974b5771e59d96 SHA256 7089261e177d9a03a6bc37bcf82b78f4730e6404301a594dc36ad835b0690137
+MISC ChangeLog 728 RMD160 2937204ab41d1b896d769253b2bde8efcc2f00b7 SHA1 0e1f49f13e559d30d93a8b8d8b41860bbe92c7e0 SHA256 fc6ce574900ba92c0d84cf4324d26cff4f3b698bf6bef571bc7541bcb9332ccd
 MISC metadata.xml 161 RMD160 e30bbda629ff0856e35f9953ebed101db0879667 SHA1 c50f9338f84437ff9a4002d71a21ab0c3440237c SHA256 10876eb627faa0f7204c3bca5931c5579842b655590d4a4205d095f6137074ec
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkuxxKYACgkQNQqtfCuFneMzsACePtK+M254eQm3o5QaBS98/P85
-BSMAnjSSwRvLqOoIESFGN6LrzmI9jlK5
-=NpgZ
+iEYEARECAAYFAkxPSpUACgkQNQqtfCuFneNnZwCeKOA8oZ1O9IqeCD0siliFDw15
+jCEAn0jVivdIjo/jJFLINpmY9+97TsVY
+=jljh
 -----END PGP SIGNATURE-----
