@@ -1,6 +1,10 @@
 # ChangeLog for dev-vcs/bzr-explorer
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-explorer/ChangeLog,v 1.4 2010/07/27 20:55:31 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/bzr-explorer/ChangeLog,v 1.5 2010/07/27 21:01:04 fauli Exp $
+
+  27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
+  -bzr-explorer-1.0.1.ebuild:
+  clean up
 
   27 Jul 2010; Christian Faulhammer <fauli@gentoo.org>
   bzr-explorer-1.0.2.ebuild:
